Develop CommandHandler implementation

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "psr-4": {
       "I4code\\Improse\\Tests\\": "tests/"
     },
-    "files": ["tests/function_overrides.php"]
+    "files": ["tests/function_overrides.php", "tests/helpers.php"]
   },
   "require": {
   },
