--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,6 +31,7 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Setup PHP
+      uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
 
